Change canonicalize liblary

--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="container">
     <h1 class="text-center">XML digital signature</h1>
-    <p>Canonicalization algorithm: xml-exc-c14n</p>
+    <p>Canonicalization algorithm: Canonical XML 1.0</p>
     <p>Digest algorithm: SHA256</p>
     <p>Signature algorithm: RSA-SHA256</p>
     <p>Envoloped</p>
@@ -64,6 +64,7 @@
     </legend>
     <textarea id="verify-content" style="width: 100%;height: 300px;"></textarea>
     <input type="button" id="verify" value="Verify" />
+    <input type="button" id="clear" value="Clear" />
     <div id="verify-result"></div>
   </div>
   <script src="/script.js"></script>
